// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home Reducer Handles concatenates 2 movie objects  1`] = `
Object {
  "favMovies": Array [],
  "loading": false,
  "movies": Array [
    Object {
      "Poster": "https://m.media-amazon.com/images/M/MV5BZDEyN2NhMjgtMjdhNi00MmNlLWE5YTgtZGE4MzNjMTRlMGEwXkEyXkFqcGdeQXVyNDUyOTg3Njg@._V1_SX300.jpg",
      "Title": "Spider-Man",
      "Type": "movie",
      "Year": "2002",
      "imdbID": "tt0145487",
    },
    Object {
      "Poster": "https://m.media-amazon.com/images/M/MV5BZDEyN2NhMjgtMjdhNi00MmNlLWE5YTgtZGE4MzNjMTRlMGEwXkEyXkFqcGdeQXVyNDUyOTg3Njg@._V1_SX300.jpg",
      "Title": "Spider-Man 2",
      "Type": "movie",
      "Year": "2002",
      "imdbID": "tt0145487",
    },
  ],
  "noMoviesFound": false,
  "selectedMovie": Object {},
}
`;

exports[`Home Reducer Handles load 1 movie  1`] = `
Object {
  "favMovies": Array [],
  "loading": false,
  "movies": Array [
    Object {
      "Poster": "https://m.media-amazon.com/images/M/MV5BZDEyN2NhMjgtMjdhNi00MmNlLWE5YTgtZGE4MzNjMTRlMGEwXkEyXkFqcGdeQXVyNDUyOTg3Njg@._V1_SX300.jpg",
      "Title": "Spider-Man",
      "Type": "movie",
      "Year": "2002",
      "imdbID": "tt0145487",
    },
  ],
  "noMoviesFound": false,
  "selectedMovie": Object {},
}
`;

exports[`Home Reducer Removes Movies from Array 1`] = `
Object {
  "favMovies": Array [],
  "loading": false,
  "movies": Array [],
  "noMoviesFound": true,
  "selectedMovie": Object {},
}
`;

exports[`Home Reducer updates Favourite Movies Array 1`] = `
Object {
  "favMovies": Array [
    "tt0145487",
  ],
  "loading": false,
  "movies": Array [],
  "noMoviesFound": true,
  "selectedMovie": Object {},
}
`;

exports[`Home Reducer updates removes movie Favourite Movies Array 1`] = `
Object {
  "favMovies": Array [],
  "loading": false,
  "movies": Array [],
  "noMoviesFound": true,
  "selectedMovie": Object {},
}
`;

exports[`Home Reducer updates selected movie details 1`] = `
Object {
  "favMovies": Array [],
  "loading": false,
  "movies": Array [],
  "noMoviesFound": true,
  "selectedMovie": Object {
    "Actors": "Tobey Maguire, Willem Dafoe, Kirsten Dunst, James Franco",
    "Awards": "Nominated for 2 Oscars. Another 16 wins & 61 nominations.",
    "BoxOffice": "$403,706,375",
    "Country": "USA",
    "DVD": "01 Nov 2002",
    "Director": "Sam Raimi",
    "Genre": "Action, Adventure, Sci-Fi",
    "Language": "English",
    "Metascore": "73",
    "Plot": "Based on Marvel Comics",
    "Poster": "https://m.media-amazon.com/images/M/MV5BZDEyN2NhMjgtMjdhNi00MmNlLWE5YTgtZGE4MzNjMTRlMGEwXkEyXkFqcGdeQXVyNDUyOTg3Njg@._V1_SX300.jpg",
    "Production": "Columbia Pictures",
    "Rated": "PG-13",
    "Ratings": Array [
      Object {
        "Source": "Internet Movie Database",
        "Value": "7.3/10",
      },
      Object {
        "Source": "Rotten Tomatoes",
        "Value": "90%",
      },
      Object {
        "Source": "Metacritic",
        "Value": "73/100",
      },
    ],
    "Released": "03 May 2002",
    "Response": "True",
    "Runtime": "121 min",
    "Title": "Spider-Man",
    "Type": "movie",
    "Website": "N/A",
    "Writer": "Stan Lee (Marvel comic book),Steve Ditko (Marvel comic book), David Koepp (screenplay)",
    "Year": "2002",
    "imdbID": "tt0145487",
    "imdbRating": "7.3",
    "imdbVotes": "674,123",
  },
}
`;
